<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bnv_nutrition"
        android:icon="@android:drawable/ic_secure"
        android:orderInCategory="0"
        android:title="@string/bnv_food" />
    <item
        android:id="@+id/bnv_footSteps"
        android:icon="@android:drawable/ic_secure"
        android:orderInCategory="1"
        android:title="@string/bnv_footSteps" />
    <item
        android:id="@+id/bnv_profile"
        android:icon="@android:drawable/ic_secure"
        android:orderInCategory="2"
        android:title="@string/bnv_profile" />
    <item
        android:id="@+id/bnv_more"
        android:icon="@android:drawable/ic_secure"
        android:orderInCategory="3"
        android:title="@string/bnv_more" />

</menu>